   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - Bugs fixed
        - Some Jetty parameters (maxThreads, etc.) had to be set at the
          connector creation time instead. Now they only need to be set
          at start time. Reported by Avi Flax.
        - Fixed issue with Grizzly Maven artifact ID. 
          Reported by Daniel Peters.
    - Misc
        - Updated license file to mention distribution under EPL 1.0 in
          addition to other licenses, like for Restlet 2.0.

- 1.1.6 (2009-09-28)
    - Bugs fixed
        - Fixed bug in Template class when the pattern is updated.
        - Fixed bug when a Restlet application is deployed in Weblogic 
          10 listening on port 80. Reported by Sondre Eikanger Kvalø.
        - Fixed bug with the type of the content tag of Atom documents.
        - Fixed bug regarding reading of WriterRepresentation.
          Patch contributed by Bruno Dumon.
        - GWT client now accepts relative HTTP URIs.
          Reported by Wish Gandhi and fixed by Bruno Harbulot.
        - Fixed potential NPE in ContentType class.
          Reported by Eric Runquist. 
        - Fixed bug with range service and redirections.
        - The "Location" header must contain an absolute URI.
          Reported by Simon Reinhardt.
        - The internal HTTP server now shuts down in all cases after
          30 seconds. Reported by Martin Pernollet.
        - Fixed potential NPE in internal HTTP server.
        - Fixed potential bug with RangeInputStream causing 100% CPU
          utilization with java NIO.
          Reported and contributed by Tal Liron.
        - Router#attachDefault() method now relies on the protected
          createRoute() method. Reported by Rob Heittman. 
    - Misc
        - Updated Grizzly to version 1.9.17.
        - Updated FileUpload to version 1.2.1.
        - Updated JavaMail to version 1.4.2.
        - Updated JAXB RI to version 2.1.12.