@@ -41,6 +41,7 @@ import javax.xml.transform.TransformerException;
 import javax.xml.transform.TransformerFactory;
 import javax.xml.transform.TransformerFactoryConfigurationError;
 import javax.xml.transform.URIResolver;
+import javax.xml.transform.sax.SAXResult;
 import javax.xml.transform.sax.SAXSource;
 import javax.xml.transform.sax.SAXTransformerFactory;
 import javax.xml.transform.sax.TransformerHandler;
@@ -50,8 +51,16 @@ import javax.xml.transform.stream.StreamSource;
 import org.restlet.Context;
 import org.restlet.data.Reference;
 import org.restlet.data.Response;
+import org.xml.sax.ContentHandler;
+import org.xml.sax.DTDHandler;
+import org.xml.sax.EntityResolver;
+import org.xml.sax.ErrorHandler;
 import org.xml.sax.InputSource;
+import org.xml.sax.SAXException;
+import org.xml.sax.SAXNotRecognizedException;
+import org.xml.sax.SAXNotSupportedException;
 import org.xml.sax.XMLFilter;
+import org.xml.sax.XMLReader;
 
 /**
  * Representation able to apply an XSLT transformation. The internal JAXP
@@ -67,6 +76,181 @@ import org.xml.sax.XMLFilter;
  * @author Jerome Louvel
  */
 public class TransformRepresentation extends OutputRepresentation {
+
+    /**
+     * Abstract SAX XML Reader.
+     * 
+     * @author Warren Janssens
+     */
+    private static abstract class AbstractXmlReader implements XMLReader {
+
+        /** The features map. */
+        private final HashMap<String, Boolean> features;
+
+        /** The properties map. */
+        private final HashMap<String, Object> properties;
+
+        /** The entity resolver. */
+        private EntityResolver entityResolver;
+
+        /** The DTD handler. */
+        private DTDHandler handler;
+
+        /** The content handler. */
+        private ContentHandler contentHandler;
+
+        /** The error handler. */
+        private ErrorHandler errorHandler;
+
+        /**
+         * Default constructor.
+         */
+        public AbstractXmlReader() {
+            this.features = new HashMap<String, Boolean>();
+            this.properties = new HashMap<String, Object>();
+        }
+
+        /**
+         * Return the content handler.
+         * 
+         * @return The content handler.
+         * @see XMLReader#getContentHandler()
+         */
+        public ContentHandler getContentHandler() {
+            return contentHandler;
+        }
+
+        /**
+         * Return the DTD handler.
+         * 
+         * @return The DTD handler.
+         * @see XMLReader#getDTDHandler()
+         */
+        public DTDHandler getDTDHandler() {
+            return handler;
+        }
+
+        /**
+         * Return the entity resolver.
+         * 
+         * @return The entity resolver.
+         * @see XMLReader#getEntityResolver()
+         */
+        public EntityResolver getEntityResolver() {
+            return entityResolver;
+        }
+
+        /**
+         * Return the error handler.
+         * 
+         * @return The error handler.
+         * @see XMLReader#getErrorHandler()
+         */
+        public ErrorHandler getErrorHandler() {
+            return errorHandler;
+        }
+
+        /**
+         * Returns the feature by name.
+         * 
+         * @param name
+         *            The feature name.
+         * @return The feature.
+         * @see XMLReader#getFeature(String)
+         */
+        public boolean getFeature(String name)
+                throws SAXNotRecognizedException, SAXNotSupportedException {
+            final Boolean result = features.get(name);
+            return result == null ? false : result.booleanValue();
+        }
+
+        /**
+         * Returns the property by name.
+         * 
+         * @param name
+         *            The property name.
+         * @return The property.
+         * @see XMLReader#getProperty(String)
+         */
+        public Object getProperty(String name)
+                throws SAXNotRecognizedException, SAXNotSupportedException {
+            return properties.get(name);
+        }
+
+        /**
+         * Sets the content handler.
+         * 
+         * @param contentHandler
+         *            The content handler.
+         * @see XMLReader#setContentHandler(ContentHandler)
+         */
+        public void setContentHandler(ContentHandler contentHandler) {
+            this.contentHandler = contentHandler;
+        }
+
+        /**
+         * Sets the DTD handler.
+         * 
+         * @param handler
+         *            The DTD handler.
+         * @see XMLReader#setDTDHandler(DTDHandler)
+         */
+        public void setDTDHandler(DTDHandler handler) {
+            this.handler = handler;
+        }
+
+        /**
+         * Sets the entity resolver.
+         * 
+         * @param entityResolver
+         *            The entity resolver.
+         * @see XMLReader#setEntityResolver(EntityResolver)
+         */
+        public void setEntityResolver(EntityResolver entityResolver) {
+            this.entityResolver = entityResolver;
+        }
+
+        /**
+         * Sets the error handler.
+         * 
+         * @param errorHandler
+         *            The error handler.
+         * @see XMLReader#setErrorHandler(ErrorHandler)
+         */
+        public void setErrorHandler(ErrorHandler errorHandler) {
+            this.errorHandler = errorHandler;
+        }
+
+        /**
+         * Sets a feature.
+         * 
+         * @param name
+         *            The feature name.
+         * @param value
+         *            The feature value.
+         * @see XMLReader#setFeature(String, boolean)
+         */
+        public void setFeature(String name, boolean value)
+                throws SAXNotRecognizedException, SAXNotSupportedException {
+            this.features.put(name, value);
+        }
+
+        /**
+         * Sets a property.
+         * 
+         * @param name
+         *            The property name.
+         * @param value
+         *            The property value.
+         * @see XMLReader#setProperty(String, Object)
+         */
+        public void setProperty(String name, Object value)
+                throws SAXNotRecognizedException, SAXNotSupportedException {
+            this.properties.put(name, value);
+        }
+
+    }
+
     /**
      * URI resolver based on a Restlet Context instance.
      * 
@@ -256,51 +440,46 @@ public class TransformRepresentation extends OutputRepresentation {
      * @throws IOException
      */
     public SAXSource getSaxSource() throws IOException {
-        SAXSource source = null;
+        SAXSource result = null;
 
         if (getSourceRepresentation() instanceof XmlRepresentation) {
-            source = ((XmlRepresentation) getSourceRepresentation())
+            result = ((XmlRepresentation) getSourceRepresentation())
                     .getSaxSource();
         } else if (getSourceRepresentation() instanceof TransformRepresentation) {
-            final TransformRepresentation lastTR = (TransformRepresentation) getSourceRepresentation();
-            TransformRepresentation rootTR = lastTR;
-            final XMLFilter lastFilter = lastTR.getXmlFilter();
-            XMLFilter rootFilter = lastFilter;
-            XMLFilter currFilter = null;
+            XMLReader reader = new AbstractXmlReader() {
 
-            // Walk up the transformation hierarchy while
-            // building the chain of SAX filters
-            while (rootTR.getSourceRepresentation() instanceof TransformRepresentation) {
-                rootTR = (TransformRepresentation) rootTR
-                        .getSourceRepresentation();
-                currFilter = rootTR.getXmlFilter();
-                rootFilter.setParent(currFilter);
-                rootFilter = currFilter;
-            }
+                public void parse(InputSource input) throws IOException,
+                        SAXException {
+                    try {
+                        TransformRepresentation source = (TransformRepresentation) getSourceRepresentation();
+                        source.getTransformer().transform(
+                                source.getSaxSource(),
+                                new SAXResult(getContentHandler()));
+                    } catch (TransformerException te) {
+                        throw new IOException("Transformer exception. "
+                                + te.getMessage());
+                    }
+                }
 
-            InputSource rootSource = null;
-            if (rootTR.getSourceRepresentation() instanceof XmlRepresentation) {
-                rootSource = ((XmlRepresentation) rootTR
-                        .getSourceRepresentation()).getSaxSource()
-                        .getInputSource();
-            } else {
-                rootSource = new InputSource(rootTR.getSourceRepresentation()
-                        .getStream());
-            }
+                public void parse(String systemId) throws IOException,
+                        SAXException {
+                    throw new IllegalStateException("Not implemented");
+                }
+            };
 
-            source = new SAXSource(lastFilter, rootSource);
+            result = new SAXSource(reader, null);
         } else {
             // Prepare the source and result documents
-            source = new SAXSource(new InputSource(getSourceRepresentation()
+            result = new SAXSource(new InputSource(getSourceRepresentation()
                     .getStream()));
         }
 
         if (getSourceRepresentation().getIdentifier() != null) {
-            source.setSystemId(getSourceRepresentation().getIdentifier()
+            result.setSystemId(getSourceRepresentation().getIdentifier()
                     .getTargetRef().toString());
         }
 
-        return source;
+        return result;
     }
 
     /**
